# A-star-algorithm

./: CMakeLists.txt  README.md
.github/workflows/: ci-ubuntu-22.yml  ci-ubuntu-24.yml
docker/: build.sh  dockerfile  requirements.txt  run.sh
include/: AstarSearch.hpp  GridMap.hpp
lib/pkgconfig/: gmock_main.pc  gtest.pc
src/: main.cpp
src/AstarSearch/: AstarSearch.cpp  AstarSearch.hpp  CMakeLists.txt
src/Map/: CMakeLists.txt  GridMap.cpp  GridMap.hpp
tests/: astar_test.cc  map_test.cc
